--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,8 @@ div {
     font-size: larger;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+img {
+    max-width: 80%;
+    height: auto;
+}
