--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     }    
 }
 
-@media (max-width 599px) {
+@media (max-width: 599px) {
     body {
         background-color: rgb(78, 78, 226);
     }    
