--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,14 @@ div {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+div:hover {
+    margin: 20px;
+    border: 5 px rgb(217, 241, 77);
+    font-style: bold;
+    font-size: x-large;
+    font-family: 'Franklin Gothic Medium';
+}
+
 img {
     max-width: 100%;
     height: auto;
