--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,10 @@
-@media (min-width: 600px) {
-    body {
-        background-color: rgb(236, 128, 85);
-    }    
-}
 
-@media (max-width: 599px) {
-    body {
-        background-color: rgb(64, 64, 148);
-    }    
-}
 
-#firstTry {
+/* #firstTry {
 
     color: #7aaaf3;
     text-shadow: 2px 2px 5px rgb(73, 121, 3);
-}
+} */
 
 h1 {
     color: aquamarine;
@@ -38,7 +28,7 @@ h2:hover {
     font-family: cursive;
 }
 
-div {
+/* div {
     margin: 20px;
     border: 5 px saddlebrown;
     font-style: italic;
@@ -52,10 +42,9 @@ div:hover {
     font-style: bold;
     font-size: x-large;
     font-family: 'Franklin Gothic Medium';
-}
+} */
 
-img {
-    max-width: 100%;
-    height: auto;
+/* img {
     padding: 4px;
-}
+    margin: 5px;
+} */
